--- a/LangtonsAnt/LangtonsAnt.vcxproj
+++ b/LangtonsAnt/LangtonsAnt.vcxproj
@@ -137,6 +137,11 @@
   <ItemGroup>
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Ant.h" />
+    <ClInclude Include="Ants.h" />
+    <ClInclude Include="Dir.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
